# tui-chat

./: .env.example  Cargo.toml  README.md  docker-compose.yml
brainstorm/: index.js  package-lock.json  package.json  wrangler.toml
brainstorm/src/: index.js
client/: go.mod  go.sum  main.go
signaling/: Cargo.toml
signaling/src/: config.rs  main.rs  message.rs  server.rs  transport.rs
signaling/src/handlers/: join.rs
signaling/src/repositories/: mod.rs  peer_repository.rs
