[package]
name = "signaling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
dotenv = "0.15.0"
rand = "0.8.5"
redis = { version = "0.25.0", features = ["serde_json", "serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "full"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
